Será que funcionou?

--- a/Página_Web/Html_página.html
+++ b/Página_Web/Html_página.html
@@ -16,9 +16,7 @@
     </ul>
     <p>com os conhecimentos certos, nós vamos progredir nos nossos conhecimentos</p>
     <p>Clicando aqui você irá ser transportado para um site legal:</p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/HTML_basics" >Mozilla Manifesto</a
->
-
+    <a href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/HTML_basics" >Mozilla Manifesto</a>
     <img src="images/google-icon.png" alt="minha página de teste" />
   </body>
 </html>
