Versão com imagem

--- a/Página_Web/Html_página.html
+++ b/Página_Web/Html_página.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="pt-BR">
   <head>
     <link href="estilos/estilo.css" rel="stylesheet" />
     <meta charset="utf-8" />
@@ -8,15 +8,18 @@
   </head>
   <body>
     <h2>Meu titulo vai ficar aqui</h2>
-    <p>Na minha página vai ter topicos que vai debater sobre</p>
+    <p>Na minha página vai ter tópicos que vai debater sobre</p>
     <ul>
-        <li>Tecnólogia</li>
-        <li>Oberservações</li>
-        <li>Psicologia</li>
+      <li>Tecnologia</li>
+      <li>Observações</li>
+      <li>Psicologia</li>
     </ul>
-    <p>com os conhecimentos certos, nós vamos progredir nos nossos conhecimentos</p>
+    <p>Com os conhecimentos certos, nós vamos progredir nos nossos conhecimentos</p>
+    <p>Esse é o meu papagaio, gostou?</p>
+    <img src="./Imagens/papagaio.jpg" 
+      width="350"
+      height="171"/>
     <p>Clicando aqui você irá ser transportado para um site legal:</p>
-    <a href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/HTML_basics" >Mozilla Manifesto</a>
-    <img src="images/google-icon.png" alt="minha página de teste" />
+    <a href="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/HTML_basics">Mozilla Manifesto</a>
   </body>
 </html>
