--- a/Página_Web/Htmls/Html_página.html
+++ b/Página_Web/Htmls/Html_página.html
@@ -16,7 +16,7 @@
     </ul>
     <p>Com os conhecimentos certos, nós vamos progredir nos nossos conhecimentos</p>
     <p>Esse é o meu papagaio, gostou?</p>
-    <img src="./Imagens/papagaio.jpg" 
+    <img src="/Página_Web/Htmls/Imagens/papagaio.jpg" 
       width="350"
       height="171"/>
     <p>Clicando aqui você irá ser transportado para um site legal:</p>
